--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     }
     .card-group {
       display: flex;
-      gap: 5px;
+      gap: 1rem;
+      flex-wrap: wrap;
+      width: 100%;
     }
     .card{
       background-color: khaki;
@@ -91,7 +93,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="ui2.jpg" class="card-img-top rounded-4" alt="Image">
+      <img src="ui2.jpg" class="card-img-top img-fluid rounded-4" alt="Image">
       <div class="card-body">
         <h5 class="card-title">User-friendly UI</h5>
         <p class="card-text">Enjoy a seamless interface designed for ease and efficiency! Intuitive navigation, optimized layouts, and responsive elements ensure a fluid experience. With smart design and adaptive functionality, every interaction feels natural and effortless. No clutter, no confusion—just a perfectly smooth UI!</p>
@@ -99,7 +101,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="team.jpg" class="card-img-top rounded-4" alt="Image">
+      <img src="team.jpg" class="card-img-top img-fluid rounded-4" alt="Image">
       <div class="card-body">
         <h5 class="card-title">Team work</h5>
         <p class="card-text">Enhance collaboration with a smooth, AI-powered workflow! Communicate effortlessly, coordinate tasks seamlessly, and boost productivity with smart automation. Stay in sync with your team as AI optimizes interactions for efficiency. No delays, no confusion—just flawless teamwork for every project!</p>
