--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     }
     .navbar{
       background-color: aqua !important ;
+      width: 100%;
+      max-width: 100vw;
     }
     .jumbotron{
       padding: 50px;
@@ -45,6 +47,7 @@
       margin-top: 50px;
       height: 300px;
     }
+
   </style>
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbar" data-offset="150">
