--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Document</title>
 
   <style>
+    *{
+      border: 1px solid red;
+    }
     body{
       background-color:khaki;
       padding-top: 80px;
@@ -33,8 +36,9 @@
     }
     #content{
       text-align: center;
-      margin: 50px;
-      padding: 30px;
+      width: 100%;
+      margin: 50px 0;
+      padding: 30px 0;  
     }
      footer a:hover {
       text-decoration: underline;
