--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     #content{
       text-align: center;
       width: 100%;
-      margin: 50px 0;
+      margin: 40px;
       padding: 30px 0;  
     }
      footer a:hover {
